# libexpression

./: .gitignore  CMakeLists.txt  README.md  README.rst
include/expression/: and_operator.hpp  array_entity.hpp  constant_entity.hpp  entity.hpp  expression.hpp  operator.hpp  or_operator.hpp  types.hpp  variable_entity.hpp  xor_operator.hpp
src/: main.cpp
src/expression/: types.cpp
tests/: and.cpp  equality.cpp  or.cpp  xor.cpp
